crates/ferrum-interfaces/tests/ui/vnext/fail/unvalidated_operation_oracle_request_is_not_deserialize.rs
use ferrum_interfaces::vnext::UnvalidatedOperationOracleRequest;

fn main() {
    let _: UnvalidatedOperationOracleRequest = serde_json::from_str("{}").unwrap();
}
